syntax = "proto2";
package antalk.common;
option java_package = "com.antalk.pb";
//option optimize_for = LITE_RUNTIME;


enum ResultType {
	REFUSE_REASON_NONE				   = 0;
	REFUSE_REASON_NO_MSG_SERVER		   = 1;
	REFUSE_REASON_MSG_SERVER_FULL 	   = 2;
	REFUSE_REASON_NO_DB_SERVER		   = 3;
	REFUSE_REASON_NO_LOGIN_SERVER	   = 4;
	REFUSE_REASON_NO_ROUTE_SERVER	   = 5;
	REFUSE_REASON_DB_VALIDATE_FAILED   = 6;
	REFUSE_REASON_VERSION_TOO_OLD	   = 7;
	REFUSE_REASON_INVALID_PASSWD       = 8;
	ERROR_CONNECT_TO_AUTH              = 9;
	ERROR_RPC_TO_AUTH                  = 10;
}

enum ClientType {
	CLIENT_TYPE_WINDOWS     = 0x01;
    CLIENT_TYPE_MAC         = 0x02;
    CLIENT_TYPE_IOS         = 0x11;
    CLIENT_TYPE_ANDROID     = 0x12;
}

message UserInfo {
	optional uint32 user_id = 1;
	optional uint32 user_gender = 2; 	//// 用户性别,男：1 女：2 人妖/外星人：0
	optional string user_nick_name = 3;	//绰号
	optional string avatar_url = 4;
	optional uint32 department_id = 5;
	optional string email = 6;
	optional string user_real_name = 7;	//真名
	optional string user_tel = 8;
	optional string user_domain = 9;	//用户名拼音
    optional uint32 status = 10;        //0:在职  1. 试用期 2. 正式 3. 离职 4.实习,  client端需要对“离职”进行不展示
    optional string sign_info = 11;		//签名信息
	optional string passwd = 12;		//密码
	optional uint32 en_type = 13;		//加密类型
}

enum UserStatType{
	USER_STATUS_ONLINE 	= 1;
	USER_STATUS_OFFLINE	= 2;
	USER_STATUS_LEAVE	= 3;

}

enum KickoutReason {
	OtherLogin = 1; 	//其他地方登录
}

message MsgInfo {
	optional string send_uid = 1;
	optional string recv_uid = 2;
	optional int64  msg_id   = 3;
	optional string msg_type = 4;
	optional string msg_body = 5;
	optional string attachment = 6;
}
